--- a/coverage-aggregate/pom.xml
+++ b/coverage-aggregate/pom.xml
@@ -1,8 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
-                             http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0                              http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
@@ -12,9 +9,9 @@
   </parent>
 
   <artifactId>coverage-aggregate</artifactId>
+  <packaging>pom</packaging>
   <name>Coverage Aggregate</name>
   <description>JaCoCo aggregate coverage report for SonarCloud</description>
-  <packaging>pom</packaging>
 
   <dependencies>
     <!-- Include all modules to aggregate coverage -->
@@ -68,10 +65,10 @@
         <executions>
           <execution>
             <id>report-aggregate</id>
-            <phase>verify</phase>
             <goals>
               <goal>report-aggregate</goal>
             </goals>
+            <phase>verify</phase>
           </execution>
         </executions>
       </plugin>
