--- a/msg-platform-payments-worker/pom.xml
+++ b/msg-platform-payments-worker/pom.xml
@@ -34,6 +34,10 @@
       <artifactId>msg-platform-processor</artifactId>
     </dependency>
     <dependency>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-classic</artifactId>
+    </dependency>
+    <dependency>
       <groupId>com.acme</groupId>
       <artifactId>msg-platform-messaging-ibmmq</artifactId>
     </dependency>
