--- a/msg-platform-payments-worker/src/main/resources/application.yml
+++ b/msg-platform-payments-worker/src/main/resources/application.yml
@@ -41,7 +41,7 @@ kafka:
     servers: ${KAFKA_BOOTSTRAP_SERVERS:localhost:9092}
 
 mq:
-  required-queues: ${MQ_REQUIRED_QUEUES:APP.CMD.BOOKFX.Q,APP.CMD.BOOKLIMITS.Q,APP.CMD.COMPLETEACCOUNTCREATION.Q,APP.CMD.CREATEACCOUNT.Q,APP.CMD.CREATELIMITS.Q,APP.CMD.CREATEPAYMENT.Q,APP.CMD.CREATETRANSACTION.Q,APP.CMD.INITIATESIMPLEPAYMENT.Q,APP.CMD.REVERSELIMITS.Q,APP.CMD.REVERSETRANSACTION.Q,APP.CMD.UNWINDFX.Q,APP.CMD.REPLY.Q}
+  required-queues: ${MQ_REQUIRED_QUEUES:APP.CMD.BOOKFX.Q,APP.CMD.BOOKLIMITS.Q,APP.CMD.COMPLETEACCOUNTCREATION.Q,APP.CMD.CREATEACCOUNT.Q,APP.CMD.CREATELIMITS.Q,APP.CMD.CREATEPAYMENT.Q,APP.CMD.CREATETRANSACTION.Q,APP.CMD.INITIATECREATEACCOUNTPROCESS.Q,APP.CMD.INITIATESIMPLEPAYMENT.Q,APP.CMD.REVERSELIMITS.Q,APP.CMD.REVERSETRANSACTION.Q,APP.CMD.UNWINDFX.Q,APP.CMD.REPLY.Q}
   host: ${MQ_HOST:localhost}
   port: ${MQ_PORT:1414}
   qmgr: ${MQ_QMGR:QM1}
