--- a/msg-platform-api/Dockerfile
+++ b/msg-platform-api/Dockerfile
@@ -12,6 +12,7 @@ COPY msg-platform-processor/pom.xml msg-platform-processor/
 COPY msg-platform-api/pom.xml msg-platform-api/
 COPY msg-platform-worker/pom.xml msg-platform-worker/
 COPY msg-platform-payments-worker/pom.xml msg-platform-payments-worker/
+COPY coverage-aggregate/pom.xml coverage-aggregate/
 
 # Copy source code and resources for dependencies
 COPY msg-platform-core/src msg-platform-core/src
